# LlamaReportPro

./: .env.example  .gitignore  .replit  AI_FEATURES_EXPLANATION_AND_DATA_REQUIREMENTS.md  BUGFIX_README.md  CHANGELOG_VISUALIZATION.md  Dockerfile  FRONTEND_AGENT_INTEGRATION.md  LICENSE  QUICK_START_VISUALIZATION.md  README.md  README_VISUALIZATION.md  STREAMLIT前端实时数据使用指南.md  Windows本地使用指南.md  app.py  create_demo_data.py  demo_financial_data.json  demo_financial_summary.csv  demo_time_series.csv  docker-compose.yml  pyproject.toml  replit.md  replit_removal_detailed_analysis.md  requirements.txt  requirements_simple.txt  run-config.toml  simple_backend_prototype.py  tech_stack_summary.py  test_company_analysis.py  test_comprehensive.py  test_end_to_end.py  test_end_to_end_enhanced.py  test_enhanced_integration.py  test_final_report.py  test_pdf_processing.py  test_pie_chart_fix.html  test_rag_system.py  test_table_extraction.py  verify_fix.py  verify_pie_chart_fix.py  (+3 more)
.streamlit/: config.toml
docs/: DUPONT_ANALYSIS_GUIDE.md  JSON_SERIALIZATION_FIX.md  PIE_CHART_FIX.md
llamareport-backend/: AGENT_FRONTEND_READY.md  AGENT_README.md  AGENT_SYSTEM_GUIDE.md  DEEPSEEK_MIGRATION.md  FEATURE_UPDATE.md  FIXED_STRUCTURED_OUTPUT.md  FRONTEND_GUIDE.md  FRONTEND_INTEGRATION_GUIDE.md  FRONTEND_REALTIME_UPDATE.md  PYDANTIC_V2_FIX.md  README.md  REALTIME_DATA_GUIDE.md  REALTIME_FEATURE_CHECKLIST.md  REALTIME_FEATURE_EXAMPLES.md  TEST_AGENT_FRONTEND.md  UPGRADE_TO_REALTIME.md  VISUALIZATION_GUIDE.md  compare_systems.py  config.py  demo_result_1.json  demo_result_2.json  demo_result_3.json  demo_result_4.json  demo_result_5.json  env_example.txt  main.py  quick_start_agent.py  quick_start_realtime.py  requirements.txt  start.py  verify_agent_frontend.py  交付清单.md  完整功能对比.md  实时数据功能说明.md  客户问题解答.md  开始使用实时数据功能.md  测试指南.md  项目架构说明.md
pages/: analysis.py  comparison.py  dupont_analysis.py  export.py  insights.py  qa_system.py  ratio_analysis.py  realtime_data.py  upload.py  visualization_qa.py
utils/: company_comparator.py  data_visualizer.py  dupont_visualizer.py  enhanced_integration.py  enhanced_pdf_processor.py  enhanced_query_engines.py  enhanced_workflows.py  error_handlers.py  export_engine.py  export_ui.py  financial_calculator.py  forecasting_engine.py  forecasting_viz.py  industry_analytics.py  insights_engine.py  multi_format_processor.py  pdf_processor.py  phase3_enhancements.py  phase4_enhancements.py  rag_system.py  safe_config.py  (+2 more)
(+41 files in other folders)
