[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "llama-index>=0.14.0",
    "llama-index-embeddings-openai>=0.5.1",
    "llama-index-llms-openai>=0.5.6",
    "llama-index-readers-file>=0.5.4",
    "openai>=1.107.1",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.7",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "streamlit==1.28.1",
]
